@@ -17,6 +17,8 @@
 package labs.pm.data;
 
 import java.io.IOException;
+import java.io.ObjectInputStream;
+import java.io.ObjectOutputStream;
 import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.io.PrintWriter;
@@ -30,6 +32,7 @@ import java.nio.file.StandardOpenOption;
 import java.text.MessageFormat;
 import java.text.NumberFormat;
 import java.text.ParseException;
+import java.time.Instant;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.time.format.DateTimeParseException;
@@ -58,16 +61,16 @@ public class ProductManager {
     private Map<Product, List<Review>> products = new HashMap<>();
     private ResourceFormatter formatter;
 
-    private ResourceBundle config = ResourceBundle.getBundle("labs.pm.data.config");
-    private MessageFormat reviewFormat = new MessageFormat(config.getString("review.data.format"));
-    private MessageFormat productFormat = new MessageFormat(config.getString("product.data.format"));
-    
-    private Path currentPath = Paths.get("./src/labs").toAbsolutePath();
-    
-    private Path reportsFolder = currentPath.resolve(Path.of(config.getString("reports.folder")));
-    private Path dataFolder = currentPath.resolve(Path.of(config.getString("data.folder")));
-    private Path tempFolder = currentPath.resolve(Path.of(config.getString("temp.folder")));
-    
+    private final ResourceBundle config = ResourceBundle.getBundle("labs.pm.data.config");
+    private final MessageFormat reviewFormat = new MessageFormat(config.getString("review.data.format"));
+    private final MessageFormat productFormat = new MessageFormat(config.getString("product.data.format"));
+
+    private final Path currentPath = Paths.get("./src/labs").toAbsolutePath();
+
+    private final Path reportsFolder = currentPath.resolve(Path.of(config.getString("reports.folder")));
+    private final Path dataFolder = currentPath.resolve(Path.of(config.getString("data.folder")));
+    private final Path tempFolder = currentPath.resolve(Path.of(config.getString("temp.folder")));
+
     private static final Logger logger = Logger.getLogger(ProductManager.class.getName());
     private static Map<String, ResourceFormatter> formatters
             = Map.of("en-GB", new ResourceFormatter(Locale.UK),
@@ -148,8 +151,8 @@ public class ProductManager {
             logger.log(Level.INFO, "Error printing product report" + ex.getMessage(), ex);
         }
     }
-    
-    public void printAllProducts(){
+
+    public void printAllProducts() {
         this.products.keySet().forEach(p -> {
             try {
                 printProductReport(p);
@@ -161,14 +164,14 @@ public class ProductManager {
 
     public void printProductReport(Product product) throws IOException {
         List<Review> reviews = this.products.get(product);
-         Path productFile = reportsFolder.resolve("report" + product.getId() + ".txt");
-         
-         Files.deleteIfExists(productFile);
-         
-         try (PrintWriter out = new PrintWriter(new OutputStreamWriter(
-                            Files.newOutputStream(productFile, StandardOpenOption.CREATE), "UTF-8"))){
-             
-             out.append(formatter.formatProduct(product) + System.lineSeparator());
+        Path productFile = reportsFolder.resolve("report" + product.getId() + ".txt");
+
+        Files.deleteIfExists(productFile);
+
+        try ( PrintWriter out = new PrintWriter(new OutputStreamWriter(
+                Files.newOutputStream(productFile, StandardOpenOption.CREATE), "UTF-8"))) {
+
+            out.append(formatter.formatProduct(product) + System.lineSeparator());
             if (reviews.isEmpty()) {
                 out.append(formatter.getText("no.review") + System.lineSeparator());
             } else {
@@ -176,7 +179,7 @@ public class ProductManager {
                         .map(r -> formatter.formatReview(r) + System.lineSeparator())
                         .collect(Collectors.joining()));
             }
-        } 
+        }
     }
 
     public void printProducts(Comparator<Product> comparator) {
@@ -197,13 +200,13 @@ public class ProductManager {
         Review review = null;
         try {
             Object[] values = reviewFormat.parse(text);
-            
-            review = new Review(Rateable.convert(Integer.parseInt((String) values[0])), 
-                                (String) values[1]);            
+
+            review = new Review(Rateable.convert(Integer.parseInt((String) values[0])),
+                    (String) values[1]);
         } catch (ParseException | NumberFormatException ex) {
             logger.log(Level.WARNING, "Error parsing review " + text);
         }
-        
+
         return review;
     }
 
@@ -230,11 +233,50 @@ public class ProductManager {
         } catch (ParseException | NumberFormatException | DateTimeParseException ex) {
             logger.log(Level.WARNING, "Error parsing product " + text);
         }
-        
+
         return product;
     }
-    
-    private void loadAllData(){
+
+    private void dumpData() {
+        try {
+            if (Files.notExists(tempFolder)) {
+                Files.createDirectory(tempFolder);
+            }
+
+            Path tempFile = tempFolder.resolve("1.tmp");
+
+            try ( ObjectOutputStream out = new ObjectOutputStream(Files.newOutputStream(tempFile, StandardOpenOption.CREATE))) {
+                out.writeObject(products);
+                products = new HashMap<>();
+            }
+
+        } catch (IOException ex) {
+            logger.log(Level.SEVERE, "Error dumping data " + ex.getMessage(), ex);
+        }
+    }
+
+    @SuppressWarnings("unchecked")
+    private void restoreData() {
+        try {
+
+            Path tempFile = Files.list(tempFolder)
+                    .filter(path -> path.getFileName().toString().endsWith("tmp"))
+                    .findFirst().orElseThrow();
+
+            try ( ObjectInputStream in = new ObjectInputStream(
+                    Files.newInputStream(tempFile, StandardOpenOption.DELETE_ON_CLOSE))) {
+
+                products = (HashMap) in.readObject();
+
+            } catch (Exception e) {
+            }
+
+        } catch (Exception ex) {
+            logger.log(Level.SEVERE, "Error restoring data " + ex.getMessage(), ex);
+        }
+    }
+
+    private void loadAllData() {
         try {
             products = Files.list(dataFolder)
                     .filter(file -> file.getFileName().toString().startsWith("product"))
@@ -244,28 +286,28 @@ public class ProductManager {
             logger.log(Level.SEVERE, "Error loading data " + ex.getMessage(), ex);
         }
     }
-    
-    public Product  loadProducts(Path file) {
-        Product product = null;        
+
+    public Product loadProducts(Path file) {
+        Product product = null;
         try {
-            product = parseProduct(Files.lines(dataFolder.resolve(file), 
+            product = parseProduct(Files.lines(dataFolder.resolve(file),
                     Charset.forName("UTF-8")).findFirst().orElseThrow());
         } catch (Exception ex) {
             logger.log(Level.WARNING, "Error loading product " + ex.getMessage());
         }
-        
+
         return product;
     }
-    
-    public List<Review>  loadReviews(Product product) {
+
+    public List<Review> loadReviews(Product product) {
         List<Review> reviews = null;
-        
+
         Path file = dataFolder.resolve(MessageFormat.format(
-                                config.getString("reviews.data.file"), product.getId()));
-        
-        if(Files.notExists(file)){
+                config.getString("reviews.data.file"), product.getId()));
+
+        if (Files.notExists(file)) {
             reviews = new ArrayList<>();
-        }else{
+        } else {
             try {
                 Files.lines(file, Charset.forName("UTF-8"))
                         .map(text -> parseReview(text))
@@ -275,7 +317,7 @@ public class ProductManager {
                 logger.log(Level.WARNING, "Error loading reviews " + ex.getMessage());
             }
         }
-        
+
         return reviews;
     }
 
